apps/immich/upload-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: immich-upload
  namespace: app
spec:
  buffering:
    maxRequestBodyBytes: 0
    maxResponseBodyBytes: 0
