apps/immich/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: immich
  namespace: app
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`immich.theorangeserver.net`)
      kind: Rule
      middlewares:
        - name: immich-upload
      services:
        - name: immich-server
          port: 2283
  tls:
    secretName: wildcard-certificate
